--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
           <dt><a href="http://www.cs.rice.edu/~zoran/Welcome.html">Zoran Budimli&#x107;</a></dt>
           <dd>Rice University</dd>
 
+          <dt><a href="http://www.cs.ou.edu/~mkong">Martin Kong</a></dt>
+          <dd>University of Oklahoma</dd>
+
           <dt><a href="https://www.linkedin.com/in/kathknobe/">Kath Knobe</a></dt>
           <dd>Rice University</dd>
 
