LNP: put agenda and hotel info

--- a/index.html
+++ b/index.html
@@ -116,9 +116,10 @@
         <div class="prepend-top">
           <h3 class="caps prepend-top">Location</h3>
           <p>
-          The workshop will be held at the University of Utah, in Salt Lake City, UT.
-          Travel, lodging and registration information will be posted soon.
-
+            The workshop will be held at the University of Utah, in Salt Lake City, UT.</p>
+	 <p>     
+	   We do not have negotiated rates with local hotels, instead just reserve a hotel at your convenience. We recommend the  <a href="https://www.hilton.com/en/hotels/slcfhhx-hampton-suites-salt-lake-city-university-foothill-dr/"> Hampton Inn & Suites Salt Lake City/University-Foothill Dr.</a> which is conveniently located.
+	  
           <!--We will meet in room 2005 of the Emerging Technologies Building (ETB)
           for both the Friday afternoon tutorial and the Saturday workshop sessions.
           Please refer to <a href="https://parasol.tamu.edu/lcpc2018/venues.html#etb">the
@@ -127,28 +128,30 @@
           </p>
         </div>
 
-<!-- We don't know yet.	
         <div class="prepend-top">
           <h3 class="caps prepend-top">Online Registration</h3>
           <p>
           Thanks to the generous donations from our sponsors,
           we will not require a registration fee for workshop attendance this year.
+<!-- We don't know yet.	
+
+	  
           However, we still require online registration to ensure we have sufficient seating and 
           refreshments.
           If you plan to attend all or part of the workshop this year,
           please register online by Friday November 2, 2018:<br />
           <!-- <a href="https://goo.gl/forms/jdYP4cKeVqZDMWjB3">2018 CnC Workshop Online Registration</a> -->
-<!--	  
-          Registration form to come soon.
+          Registration form to come soon (Utah students: feel free to stop by without registration).
           </p>
         </div>
--->
 <!--	  
         <div class="prepend-top">
           <h3 class="caps prepend-top">Hotel Information</h3>
           <p>Attendees can find lodge at the <a href="https://hiltongardeninn3.hilton.com/en/hotels/new-york/hilton-garden-inn-stony-brook-ISPSBGI/index.html">Hilton Garden Inn Stony Brook</a>. Conveniently located at just  an 8 minute walk from IACS.  </p>
         </div>
--->
+	-->
+	
+<!--
         <div class="prepend-top" style="opacity: 1.0">
           <h3 class="caps prepend-top">Participation and call for abstracts</h3>
 
@@ -172,8 +175,125 @@
           </ul>        
   
         </div>
+
+	-->
+        <div class="prepend-top" style="opacity: 1.0">
+          <h3 class="caps prepend-top">Agenda for the workshop (tentative):</h3>
+	  </div>
+
+        <div class="prepend-top" style="opacity: 1.0">
+          <h3 class="caps prepend-top">Tuesday morning (Tutorials/Keynote) </h3>
+        
+<ul>
+<b>9:00am:<br>
+Introduction to CnC: A dependence programming model<br>
+Kath Knobe</b>,
+Rice University
+</ul>
+
+<ul>
+<b>10:00am:<br>
+Introduction to Intel Concurrent Collections<br>
+Louis-Noel Pouchet</b>
+Colorado State University
+</ul>
+
+<ul>
+<b>11:00am:<br>
+Keynote: How to Sugarcoat System Resilience?<br>
+Ganesh Gopalakrishnan</b>
+School of Computing, University of Utah
+</ul>
+
+        </div>
+
+        <div class="prepend-top" style="opacity: 1.0">
+          <h3 class="caps prepend-top">Tuesday afternoon (Technical Talks) </h3>
+
+<ul>
+<b>1:00pm:<br>
+MADNESS -- a moving target<br>
+Robert Harrison</b>
+IACS, Stony Brook University
+</ul>
+
+<ul>
+<b>1:30pm:
+CnC Program Annotations<br>
+Zoran Budimlic and Kath Knobe</b>
+Rice University
+</ul>
+
+<ul>
+<b>2:00pm:<br>
+Efficient Execution of Dynamic Programs using Data-Flow Parallel Paradigm<br>
+Mohammad Mahdi Javanmard</b>
+Stony Brook University
+</ul>
+
+
+<ul>
+<b>3:00pm:<br>
+Invited talk: Continuation marks<br>
+Matthew Flatt</b>
+University of Utah
+</ul>
+
+
+<ul>
+<b>3:30pm:<br>
+Formalizing CnC semantics<br>
+Tiago Cogumbreiro and Kath Knobe</b>
+U. Massachusetts and Rice University
+</ul>
+
+<ul>
+<b>4:00pm:<br>
+A CnC-like language to optimize DNA manufacturing processes<br>
+Louis-Noel Pouchet and Jean Peccoud</b>
+Colorado State University
+</ul>
+
+      </div>
+
+        <div class="prepend-top" style="opacity: 1.0">
+          <h3 class="caps prepend-top">Wednesday morning (Keynote and Tech. Talks) </h3>
+
+<ul>
+<b>9:00am:<br>
+Keynote<br>
+George Bosilca</b>
+U. Tenesse
+</ul>
+
+<ul>
+<b>10:30am:<br>
+Distributed Hierarchical CnC Runtime<br>
+Srdjan Milakovic and Zoran Budimlic</b>
+Rice University
+</ul>
+
+<ul>
+<b>11:00am:<br>
+CnC-in-CnC<br>
+Kath Knobe</b>
+Rice University
+</ul>
+
+<ul>
+<b>11:30am:<br>
+Tracing for Distributed CnC<br>
+Srdjan Milakovic and Zoran Budimlic</b>
+Rice University
+</ul>
+
+</div>
+
+	
 <!--        
         Thursday - CnC Tutorials
+
+
 
 
 <ul>
