LNP: add Matt Flatt talk title

--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@ Stony Brook University
 
 <ul>
 <b>3:00pm:<br>
-Invited talk: Continuation marks<br>
+Continuation Marks: Compiler-Visible and Concurrency-Friendly Reflection
+ on Control (Invited talk)<br>
 Matthew Flatt</b>
 University of Utah
 </ul>
