LNP: edit agenda

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ Stony Brook University
 
 <ul>
 <b>9:00am:<br>
-Keynote<br>
+Keynote: Specialized dataflow DSL as an alternative programming paradigm<br>
 George Bosilca</b>
 U. Tenesse
 </ul>
