LNP: minor edits

--- a/index.html
+++ b/index.html
@@ -191,6 +191,11 @@ Kath Knobe</b>,
 Rice University
 </ul>
 
+
+<ul>
+<b>10:15am:<br>Coffee break</b>
+</ul>
+  
 <ul>
 <b>10:30am:<br>
 Introduction to Intel Concurrent Collections<br>
@@ -205,6 +210,11 @@ Robert Harrison</b>
 IACS, Stony Brook University
 </ul>
 
+<ul>
+<b>12:00pm:<br>Lunch break</b>
+</ul>
+
+  
         </div>
 
         <div class="prepend-top" style="opacity: 1.0">
@@ -232,6 +242,9 @@ Zoran Budimlic and Kath Knobe</b>
 Rice University
 </ul>
 
+<ul>
+<b>3:00pm:<br>Coffee break</b>
+</ul>
 
 
 <ul>
@@ -269,6 +282,10 @@ George Bosilca</b>
 U. Tenesse
 </ul>
 
+<ul>
+<b>10:00am:<br>Coffee break</b>
+</ul>
+  
 <ul>
 <b>10:30am:<br>
 Distributed Hierarchical CnC Runtime<br>
