LNP: minor edits

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 	  </div>
 
         <div class="prepend-top" style="opacity: 1.0">
-          <h3 class="caps prepend-top">Tuesday morning (Tutorials/Keynote) </h3>
+          <h3 class="caps prepend-top">Tuesday morning (Tutorials) </h3>
         
 <ul>
 <b>9:30am:<br>
@@ -218,7 +218,7 @@ IACS, Stony Brook University
         </div>
 
         <div class="prepend-top" style="opacity: 1.0">
-          <h3 class="caps prepend-top">Tuesday afternoon (Technical Talks) </h3>
+          <h3 class="caps prepend-top">Tuesday afternoon (Keynote and Tech. Talks) </h3>
 
 
 <ul>
