--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
           <h2 class="alt">
             December 3&ndash;4, 2019 at the University of Utah (Salt Lake City, UT)
           </h2>
+          <h2 class="alt">
+            <b><em>Location: <a href="https://goo.gl/maps/dARRB5dttq1n23Qk8">Warnock Engineering Building</a>, room 2760, the University of Utah</em></b>
+          </h2>
         </div>
       <hr />
       </div>
