--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           If you plan to attend all or part of the workshop this year,
           please register online by Friday November 2, 2018:<br />
           <!-- <a href="https://goo.gl/forms/jdYP4cKeVqZDMWjB3">2018 CnC Workshop Online Registration</a> -->
-          Registration form to come soon (Utah students: feel free to stop by without registration).
+          Utah students: feel free to stop by.
           </p>
         </div>
 <!--	  
