--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
           <h3 class="caps prepend-top">Location</h3>
           <p>
             The workshop will be held at the University of Utah, in Salt Lake City, UT.</p>
+	  <p>
+            <b><em>Location: <a href="https://goo.gl/maps/dARRB5dttq1n23Qk8">Warnock Engineering Building</a>, room 2760, the University of Utah</em></b>
+	    
+	    </p>
 	 <p>     
 	   We do not have negotiated rates with local hotels, instead just reserve a hotel at your convenience. We recommend the  <a href="https://www.hilton.com/en/hotels/slcfhhx-hampton-suites-salt-lake-city-university-foothill-dr/"> Hampton Inn & Suites Salt Lake City/University-Foothill Dr.</a> which is conveniently located.
 	  
@@ -132,7 +136,7 @@
         </div>
 
         <div class="prepend-top">
-          <h3 class="caps prepend-top">Online Registration</h3>
+          <h3 class="caps prepend-top">Registration</h3>
           <p>
           Thanks to the generous donations from our sponsors,
           we will not require a registration fee for workshop attendance this year.
