--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 	-->
         <div class="prepend-top" style="opacity: 1.0">
-          <h3 class="caps prepend-top">Agenda for the workshop (tentative):</h3>
+          <h3 class="caps prepend-top">Agenda for the workshop:</h3>
 	  </div>
 
         <div class="prepend-top" style="opacity: 1.0">
